@@ -33,7 +33,6 @@ import java.io.IOException;
 import java.math.BigInteger;
 import java.net.URI;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.time.Duration;
@@ -87,8 +86,8 @@ import org.apache.accumulo.core.dataImpl.KeyExtent;
 import org.apache.accumulo.core.file.FileOperations;
 import org.apache.accumulo.core.file.FileSKVWriter;
 import org.apache.accumulo.core.file.rfile.RFile;
-import org.apache.accumulo.core.metadata.AccumuloTable;
 import org.apache.accumulo.core.metadata.StoredTabletFile;
+import org.apache.accumulo.core.metadata.SystemTables;
 import org.apache.accumulo.core.metadata.UnreferencedTabletFile;
 import org.apache.accumulo.core.metadata.schema.MetadataSchema;
 import org.apache.accumulo.core.metadata.schema.MetadataTime;
@@ -1321,7 +1320,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
       justification = "path provided by test; sha-1 is okay for test")
   public static String hash(String filename) {
     try {
-      byte[] data = Files.readAllBytes(Paths.get(filename.replaceFirst("^file:", "")));
+      byte[] data = Files.readAllBytes(java.nio.file.Path.of(filename.replaceFirst("^file:", "")));
       byte[] hash = MessageDigest.getInstance("SHA1").digest(data);
       return new BigInteger(1, hash).toString(16);
     } catch (IOException | NoSuchAlgorithmException e) {
@@ -1397,12 +1396,12 @@ public class BulkNewIT extends SharedMiniClusterBase {
   static void setupBulkConstraint(String principal, AccumuloClient c)
       throws AccumuloException, AccumuloSecurityException, TableNotFoundException {
     // add a constraint to the metadata table that disallows bulk import files to be added
-    c.securityOperations().grantTablePermission(principal, AccumuloTable.METADATA.tableName(),
+    c.securityOperations().grantTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.WRITE);
-    c.securityOperations().grantTablePermission(principal, AccumuloTable.METADATA.tableName(),
+    c.securityOperations().grantTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.ALTER_TABLE);
 
-    c.tableOperations().addConstraint(AccumuloTable.METADATA.tableName(),
+    c.tableOperations().addConstraint(SystemTables.METADATA.tableName(),
         NoBulkConstratint.class.getName());
 
     var metaConstraints = new MetadataConstraints();
@@ -1413,7 +1412,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
     // wait for the constraint to be active on the metadata table
     Wait.waitFor(() -> {
-      try (var bw = c.createBatchWriter(AccumuloTable.METADATA.tableName())) {
+      try (var bw = c.createBatchWriter(SystemTables.METADATA.tableName())) {
         Mutation m = new Mutation("~garbage");
         m.put("", "", NoBulkConstratint.CANARY_VALUE);
         // This test assume the metadata constraint check will not flag this mutation, the following
@@ -1428,7 +1427,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
     });
 
     // delete the junk added to the metadata table
-    try (var bw = c.createBatchWriter(AccumuloTable.METADATA.tableName())) {
+    try (var bw = c.createBatchWriter(SystemTables.METADATA.tableName())) {
       Mutation m = new Mutation("~garbage");
       m.putDelete("", "");
       bw.addMutation(m);
@@ -1437,12 +1436,12 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
   static void removeBulkConstraint(String principal, AccumuloClient c)
       throws AccumuloException, TableNotFoundException, AccumuloSecurityException {
-    int constraintNum = c.tableOperations().listConstraints(AccumuloTable.METADATA.tableName())
+    int constraintNum = c.tableOperations().listConstraints(SystemTables.METADATA.tableName())
         .get(NoBulkConstratint.class.getName());
-    c.tableOperations().removeConstraint(AccumuloTable.METADATA.tableName(), constraintNum);
-    c.securityOperations().revokeTablePermission(principal, AccumuloTable.METADATA.tableName(),
+    c.tableOperations().removeConstraint(SystemTables.METADATA.tableName(), constraintNum);
+    c.securityOperations().revokeTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.WRITE);
-    c.securityOperations().revokeTablePermission(principal, AccumuloTable.METADATA.tableName(),
+    c.securityOperations().revokeTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.ALTER_TABLE);
   }
 }
